customer_review_service/review_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: review-ingress
spec:
  rules:
    - host: signup.yourdomain.com
      http:
        paths:
          - path: /review
            pathType: Prefix
            backend:
              service:
                name: review-service
                port:
                  number: 80
